# seL4

./: CHANGES  CMakeLists.txt
configs/: seL4Config.cmake
include/: machine.h  util.h
include/arch/arm/arch/machine/: gic_common.h  gic_v2.h
include/kernel/: boot.h
include/machine/: interrupt.h
libsel4/: CMakeLists.txt
libsel4/tools/: patch_headers.py
manual/: Makefile
src/arch/arm/: c_traps.c
src/arch/arm/kernel/: boot.c
src/arch/arm/machine/: gic_v2.c
src/arch/riscv/kernel/: boot.c
src/kernel/: boot.c
tools/: circular_includes.py  config_header_gen.py  helpers.cmake  kernel_xmllint.sh
